# address-typeahead

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .pkg  CMakeLists.txt  README.md  STYLE.md
.github/workflows/: linux.yml  windows.yml
cmake/: clang-tidy.cmake  pkg.cmake
example/: main.cc  timer.h
external_lib/boost/: CMakeLists.txt
external_lib/cereal/: CMakeLists.txt
external_lib/guess/: CMakeLists.txt
external_lib/guess/include/guess/: guesser.h
external_lib/guess/src/: guesser.cc
external_lib/guess_new/: CMakeLists.txt
external_lib/guess_new/include/guess/: guesser.h  string_util.h
external_lib/guess_new/src/: guesser.cc
include/address-typeahead/: common.h  exporter.h  extract.h  extractor.h  importer.h  serialization.h  timer.h  typeahead.h  util.h
src/: common.cc  exporter.cc  extract.cc  extractor.cc  importer.cc  main.cc  typeahead.cc
test/: simple_test.cc
test_resources/: map.osm  out.map
tools/: run-clang-tidy.py
